# CEN3031Project

./: .gitignore  CMake-SFML–Project-License.md  CMakeLists.txt  README.md  build.sh
include/: Task.h  TaskManager.h  Team.h  TeamManager.h  User.h  UserManager.h
src/: OutsideBoardThing.h  TaskConfigScreen.h  TaskCreationScreen.h  TaskManager.cpp  main.cpp
src/GUIStateMachine/: GUIState.h  GUIStateMachine.h
src/Kanban/: Board.cpp  Board.h  Column.cpp  Column.h  Element.cpp  Element.h  Icon.cpp  Icon.h  TaskCard.h  TaskOption.h  WindowPrompt.h  WindowPromptManager.h  main.cpp
src/Kanban/Board/: Board.cpp  Board.h  Column.cpp  Column.h
src/Kanban/GUIElement/: AuthenticationManager.cpp  AuthenticationManager.h  GUIElement.cpp  GUIElement.h  Icon.cpp  Icon.h  NamedButton.h  ScrollBar.cpp  ScrollBar.h  ScrollableTexture.cpp  ScrollableTexture.h  TaskCard.cpp  TaskCard.h  TaskOption.h  UI_login.cpp  UI_login.h  main.cpp
src/Kanban/WindowPrompt/: AddTaskPrompt.cpp  AddTaskPrompt.h  ColumnSettingsPrompt.cpp  ColumnSettingsPrompt.h  DummyPrompt.h  ReminderManager.cpp  ReminderManager.h  ReminderPrompt.h  SettingsPrompt.cpp  SettingsPrompt.h  TaskDetailsPrompt.cpp  TaskDetailsPrompt.h  TaskEdit.cpp  TaskEdit.h  WindowPrompt.cpp  WindowPrompt.h  WindowPromptManager.cpp  WindowPromptManager.h  WindowResizePrompt.h
src/ReminderManager/: ReminderManager.h
src/TaskManager/: Task.cpp  TaskManager.cpp  Team.cpp  TeamManager.cpp  User.cpp  UserManager.cpp  main.cpp
src/Utilities/: Utilities.cpp  Utilities.h  WindowResizeHandler.h
src/Utilities/EventSystem/: Observer.h  Subject.h
tests/: main.cpp  test_framework.cpp  test_framework.h  test_task.cpp  test_task_manager.cpp  test_team_manager.cpp  test_team_tasks.cpp  test_user.cpp  test_user_manager.cpp
